--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 /* GLOBAL */
 body {
   font-family: "Roboto", sans-serif;
+  background-color: #ecedee;
 }
 .wrapper {
   margin: auto;
@@ -67,13 +68,13 @@ h2 {
 }
 
 /* HOME */
-/* MainHome */
 .main-home-comp {
   width: 100%;
   height: 500px;
   background-color: blue;
 }
-.main-home-container {
+/* Main Home Banner */
+.main-home-banner {
   width: 100%;
   height: 100%;
   display: flex;
@@ -103,4 +104,24 @@ h2 {
   cursor: pointer;
   color: #fff;
   font-weight: 300;
+}
+
+/* MainHome Offers*/
+.offer-list {
+  width: 100%;
+  display: flex;
+  margin-top: 40px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  color: black;
+}
+.offer-item-photo {
+  width: 220px;
+  height: 300px;
+  object-fit: cover;
+  object-position: center;
+}
+.offer-item-details {
+  display: flex;
+  flex-direction: column;
 }
