--- a/src/App.css
+++ b/src/App.css
@@ -44,11 +44,13 @@ h2 {
   width: 280px;
   font-size: 16px;
   padding: 0 20px;
+  background-color: #f5f6f7;
+  border-radius: 5px;
 }
 .sign-button,
 .sell-button {
   height: 30px;
-  width: 150px;
+  width: 130px;
   border-radius: 5px;
   font-size: 14px;
   cursor: pointer;
@@ -67,7 +69,7 @@ h2 {
   color: #fff;
 }
 
-/* HOME */
+/* HOME PAGE */
 .main-home-comp {
   width: 100%;
   height: 500px;
@@ -124,4 +126,79 @@ h2 {
 .offer-item-details {
   display: flex;
   flex-direction: column;
+}
+
+/* OFFER PAGE */
+.main-offer-comp {
+  margin-top: 30px;
+}
+.main-offer-container {
+  display: flex;
+  justify-content: space-around;
+}
+.main-offer-img {
+  width: 400px;
+  height: 600px;
+  object-fit: cover;
+}
+.main-offer-details-container {
+  width: 400px;
+  height: 600px;
+  background-color: #fff;
+  padding: 40px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.main-offer-details-subcontainer {
+  width: 100%;
+  flex: 1;
+  border-bottom: 1px solid #cacaca;
+}
+.main-offer-price {
+  font-size: 22px;
+}
+.main-offer-details {
+  margin-top: 20px;
+}
+.offer-detail-comp {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+}
+.offer-detail-key {
+  color: #cacaca;
+  font-weight: 300;
+}
+.main-offer-description-container {
+  flex: 1;
+  margin: 20px 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.main-offer-description-container strong,
+.main-offer-description-container p {
+  margin-bottom: 20px;
+}
+.main-offer-description-container p {
+  color: #7b7b7b;
+  font-weight: 300;
+}
+.main-offer-description-container span {
+  font-weight: 300;
+}
+.buy-button {
+  background-color: #2db1bb;
+  border: none;
+  height: 40px;
+  width: 100%;
+  border-radius: 5px;
+  font-size: 15px;
+  cursor: pointer;
+  color: #fff;
+  font-weight: 300;
 }
