--- a/src/App.css
+++ b/src/App.css
@@ -86,8 +86,6 @@ h2 {
 .main-home-comp {
   width: 100%;
   height: 500px;
-  /* background: url("https://images.vinted.net/thumbs/2560x1441/01_02445_h4cWoccP4qQVVwScboeLTTE1.jpeg?1597418184-7a15687babec3eb1b2bfc88a47c8cb31f2827caa") */
-  /* center; */
   position: relative;
 }
 /* Main Home Banner */
@@ -242,4 +240,61 @@ h2 {
   cursor: pointer;
   color: #fff;
   font-weight: 300;
+}
+
+/* MODAL */
+.modal {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  scroll-behavior: unset;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.login-form {
+  background-color: #fff;
+  height: 400px;
+  width: 300px;
+  border-radius: 5px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
+}
+.title-form {
+  font-size: 30px;
+  font-weight: 400;
+  margin-bottom: 40px;
+}
+.input-form {
+  width: 100%;
+  margin-bottom: 20px;
+  border: none;
+  padding: 10px;
+  border-bottom: solid 1px #bbbbbb;
+  box-sizing: border-box;
+}
+.login-button {
+  height: 40px;
+  width: 100%;
+  border-radius: 5px;
+  font-size: 14px;
+  cursor: pointer;
+  font-weight: 300;
+  border: none;
+  background-color: #2db1bb;
+  color: #fff;
+  margin: 20px 0;
+}
+.redirect-form {
+  font-size: 14px;
+  font-weight: 300;
+  color: #2db1bb;
 }
