--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@ h2 {
 ::placeholder {
   color: #bbbbbb;
 }
+.link {
+  color: #000;
+  text-decoration: none;
+}
 
 /* COMMUN */
 /* Header */
@@ -248,6 +252,26 @@ h2 {
   font-weight: 300;
 }
 
+/* SIGNUP PAGE */
+.signup-page {
+  /* border: 1px solid red; */
+  margin-top: 30px;
+}
+.signup-container {
+  display: flex;
+  justify-content: center;
+}
+.signup-form {
+  height: 450px;
+  width: 350px;
+  background-color: #fff;
+  padding: 30px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /* MODAL */
 .modal {
   height: 100%;
@@ -287,7 +311,8 @@ h2 {
   border-bottom: solid 1px #bbbbbb;
   box-sizing: border-box;
 }
-.login-button {
+.login-button,
+.signup-button {
   height: 40px;
   width: 100%;
   border-radius: 5px;
@@ -299,8 +324,12 @@ h2 {
   color: #fff;
   margin: 20px 0;
 }
+.signup-button {
+  margin: 10px 0 0 0;
+}
 .redirect-form {
   font-size: 14px;
   font-weight: 300;
   color: #2db1bb;
+  cursor: pointer;
 }
