--- a/src/App.css
+++ b/src/App.css
@@ -141,6 +141,7 @@ h2 {
 .tear-img {
   position: absolute;
   bottom: 0;
+  /* width: 100px; */
 }
 
 /* MainHome Offers*/
@@ -273,6 +274,9 @@ h2 {
 }
 
 /* MODAL */
+.modal-open {
+  overflow: hidden;
+}
 .modal {
   height: 100%;
   width: 100%;
@@ -297,11 +301,19 @@ h2 {
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
+  position: relative;
+}
+.close-modal {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  cursor: pointer;
 }
 .title-form {
   font-size: 30px;
   font-weight: 400;
-  margin-bottom: 40px;
+  margin: 10px 0 30px 0;
 }
 .input-form {
   width: 100%;
