--- a/src/App.css
+++ b/src/App.css
@@ -146,7 +146,52 @@ h2 {
   margin-top: 40px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   color: #7b7b7b;
+}
+.filters {
+  position: relative;
+}
+.price-filter {
+  cursor: pointer;
+}
+.price {
+  position: absolute;
+  background-color: #fff;
+  width: 150px;
+  box-shadow: 0 8px 24px rgba(17, 17, 17, 0.24);
+  color: #000;
+  margin-top: 10px;
+}
+.price-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.price-filter-comp {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  /* border: 1px solid red; */
+  width: 130px;
+}
+.price-input {
+  width: 100px;
+  height: 18px;
+  font-size: 14px;
+  border: none;
+  border-bottom: 1px solid #000;
+}
+.price-submit {
+  background-color: #2db1bb;
+  width: 100px;
+  height: 20px;
+  margin: 10px 0;
+  border-radius: 5px;
+  border: none;
+  color: #fff;
+  cursor: pointer;
 }
 .sort-container {
   position: relative;
@@ -160,6 +205,7 @@ h2 {
   flex-direction: column;
   position: absolute;
   background-color: #fff;
+  box-shadow: 0 8px 24px rgba(17, 17, 17, 0.24);
   right: 0;
   margin-top: 10px;
   width: 150px;
@@ -178,7 +224,6 @@ h2 {
   margin-top: 20px;
   flex-wrap: wrap;
   color: black;
-  /* background-color: blueviolet; */
 }
 .offer-item {
   margin: 0 10px;
