--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,6 @@ h2 {
 .link {
   color: #000;
   text-decoration: none;
-  background-color: brown;
 }
 
 /* COMMUN */
@@ -86,6 +85,13 @@ h2 {
   border: none;
   margin-left: 40px;
   color: #fff;
+  width: 130px;
+  text-decoration: none;
+}
+.sell-button-link {
+  width: 100%;
+  height: 100%;
+  /* background-color: burlywood; */
 }
 .logout-button {
   background-color: #c1175b;
@@ -606,6 +612,35 @@ h2 {
   justify-content: space-between;
   margin-bottom: 30px;
 }
+.Payment-cardholder-container {
+  margin-top: 20px;
+}
+.Payment-cardholder-label_input-container {
+  display: flex;
+  justify-content: space-between;
+}
+.Payment-cardholder-input {
+  border: none;
+  border-bottom: 1px solid #bbbbbb;
+  font-size: 16px;
+  width: 300px;
+}
 .CheckoutForm {
   margin-top: 20px;
+}
+.CardElement {
+}
+.CheckoutForm-submit-btn-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+.CheckoutForm-submit-btn {
+  width: 200px;
+  height: 40px;
+  background-color: #00c06d;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 18px;
 }
