--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,9 @@ h2 {
   color: #fff;
   border: none;
 }
+.hamburger-menu-btn {
+  display: none;
+}
 
 /* HOME PAGE */
 .main-home-comp {
@@ -120,7 +123,8 @@ h2 {
 }
 .start-sell-container {
   height: 60%;
-  width: 400px;
+  width: auto;
+  max-width: 400px;
   padding: 0 20px;
   display: flex;
   flex-direction: column;
@@ -228,15 +232,24 @@ h2 {
 .sort-comp:first-child {
   border-bottom: 1px black solid;
 }
+.isLoading-offer-list {
+  width: 100%;
+  display: flex;
+  margin-top: 20px;
+  justify-content: center;
+}
 .offer-list {
   width: 100%;
   display: flex;
   margin-top: 20px;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   color: black;
+  justify-content: center;
 }
 .offer-item {
   margin: 0 10px;
+  /* flex: 1;
+  width: auto; */
 }
 .offer-item-user {
   padding: 10px;
@@ -244,7 +257,8 @@ h2 {
   font-size: 13px;
 }
 .offer-item-photo {
-  width: 220px;
+  max-width: 220px;
+  width: 100%;
   height: 300px;
   object-fit: cover;
   object-position: center;
@@ -282,6 +296,12 @@ h2 {
 }
 
 /* OFFER PAGE */
+.offer-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 .main-offer-comp {
   margin-top: 30px;
 }
@@ -582,6 +602,14 @@ h2 {
 .Payment {
   margin-top: 50px;
 }
+.isLoading-Payment-container {
+  width: 700px;
+  margin: 0 auto;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .Payment-container {
   width: 700px;
   margin: 0 auto;
@@ -628,8 +656,6 @@ h2 {
 .CheckoutForm {
   margin-top: 20px;
 }
-.CardElement {
-}
 .CheckoutForm-submit-btn-container {
   display: flex;
   justify-content: center;
@@ -643,4 +669,104 @@ h2 {
   border-radius: 5px;
   color: #fff;
   font-size: 18px;
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 1024px) {
+  .site-search {
+    width: 100%;
+    font-size: 12px;
+  }
+  .sign-button,
+  .sell-button,
+  .logout-button {
+    width: 120px;
+    font-size: 12px;
+    cursor: pointer;
+  }
+  .start-sell-container {
+    height: 50%;
+    width: 300px;
+    padding: 0 20px;
+  }
+  .start-sell-title {
+    font-size: 22px;
+  }
+  .offer-list {
+    flex-wrap: wrap;
+  }
+  .main-offer-img,
+  .main-offer-details-container {
+    width: 300px;
+    height: 500px;
+  }
+}
+
+@media (max-width: 768px) {
+  .header-comp {
+    /* position: relative; */
+  }
+  .sign-button,
+  .sell-button,
+  .logout-button {
+    display: none;
+  }
+  .hamburger-menu-btn {
+    display: flex;
+    color: #2db1bb;
+    cursor: pointer;
+  }
+  .hamburger-menu-container {
+    position: absolute;
+    height: 100vh;
+    width: 40%;
+    background-color: #fff;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+  .hamburger-menu-logout-btn-container,
+  .hamburger-menu-login-btn-container {
+    margin-bottom: 10px;
+  }
+  .hamburger-menu-logout-btn-container,
+  .hamburger-menu-login-btn-container,
+  .hamburger-menu-sell-btn-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    font-size: 14px;
+    color: #fff;
+    cursor: pointer;
+  }
+  .hamburger-menu-logout-btn-container {
+    background-color: #c1175b;
+  }
+  .hamburger-menu-login-btn-container {
+    border: #2db1bb solid 1px;
+    box-sizing: border-box;
+    color: #2db1bb;
+  }
+  .hamburger-menu-sell-btn-container {
+    background-color: #2db1bb;
+  }
+  .start-sell-container {
+    display: none;
+  }
+  .main-offer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .main-offer-img {
+    margin-bottom: 30px;
+  }
+  .Payment-container {
+    width: 300px;
+  }
 }
